# 3IABD_ProjetAnnuel

./: .gitignore  Precisions.txt  README.md
Project/App/: app.php  display_metrics.php  index.php
Project/App/assets/css/: main.css
Project/App/lib/: library.cpp
Project/App/models/mlp_20200710_021017_140/: mlp_32x32_rgb_metrics.txt
Project/App/php/: ddlImage.php  functions.php  predict.php
Project/App/python/: model.py  resize_image.py
Project/Docs/Rapport/: .~lock.Presentation.pptx#  SoutenanceOral
Project/Docs/Rapport/dataset/: readme.txt
Project/Docs/Rapport/metrics/: mlp_16x16_rgb_metrics1.txt  mlp_16x16_rgb_metrics2.txt  mlp_16x16_rgb_metrics5.txt  (+1 more)
Project/Lib/: library.cpp  library.h  tf_cpu.yml  tf_gpu.yml
Project/Lib/TF_Keras_applied/: mlp_keras.ipynb
Project/Lib/lib_python/: NOTEBOOK___cas_de_test.ipynb  NOTEBOOK___cas_de_test_Rust.ipynb  NOTEBOOK__test_on_dataset.ipynb  linear_classification_py.py  linear_regression_py.py  mlp_py.py  rbf_py.py  regression_simple_py.py  rust_test_on_dataset.py  svm_py.py  utils.py
Project/Lib/lib_rust/: Cargo.toml
Project/Lib/lib_rust/src/: abc.rs  classification.rs  lib.rs  lin_reg.rs  main.rs  mlp.rs  mlp_array2d.rs  rbf.rs  svm.rs
Project/Tests/: 17_06_2020_08_43_03_metrics.txt  19_06_2020_22_11_14_metrics.txt  19_06_2020_22_18_55_metrics.txt  20_06_2020_00_44_17_metrics.txt  20_06_2020_11_58_44_metrics.txt  20_06_2020_12_25_35_metrics.txt  21_06_2020_00_36_30_metrics.txt  Notebook _ CAS DE TESTS.ipynb  Notebook___CAS_DE_TESTS_Guillaume.ipynb  classification_model_test.py  model.py  resize_image.py
(+125 files in other folders)
